[gd_scene load_steps=11 format=3 uid="uid://duxjek6yye1q5"]

[ext_resource type="Script" path="res://addons/simplemenu/simple_menu.gd" id="1_6ymg3"]
[ext_resource type="Script" path="res://src/scene/main.gd" id="1_pd8mv"]
[ext_resource type="PackedScene" uid="uid://bbowo8ees051w" path="res://src/scene/text_container/text_container.tscn" id="3_6f40e"]
[ext_resource type="PackedScene" uid="uid://c24ffsu2tjn6" path="res://src/scene/config_setting_container/config_setting_container.tscn" id="3_a0hct"]
[ext_resource type="PackedScene" uid="uid://ctr71tk4fcs3h" path="res://src/scene/hot_word_container/hot_word_container.tscn" id="3_p06fv"]
[ext_resource type="Script" path="res://src/scene/queue_file_tree.gd" id="3_v5x73"]
[ext_resource type="Script" path="res://src/scene/config_window.gd" id="6_cjv4c"]
[ext_resource type="PackedScene" uid="uid://cbjh0e1kijfqj" path="res://src/scene/about/about.tscn" id="8_swybj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee0we"]
bg_color = Color(0, 0, 0, 0.301961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2kk21"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pd8mv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ee0we")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2kk21")

[node name="Menu" type="MenuBar" parent="MarginContainer/VBoxContainer2/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
flat = true
script = ExtResource("1_6ymg3")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "识别模式："

[node name="RecognitionModeButton" type="OptionButton" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
modulate = Color(1, 1, 1, 0.478431)
layout_mode = 2
text = "（如果 2pass 识别不出来，可以单独试试 offline）"

[node name="Content" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer2/Content"]
unique_name_in_owner = true
layout_mode = 2
split_offset = 300

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer"]
layout_mode = 2
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "执行文件队列："

[node name="FileQueue" type="Tree" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
hide_folding = true
hide_root = true
script = ExtResource("3_v5x73")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 2
text = "大小："

[node name="FileSizeLabel" type="Label" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.552941)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
text = "0"

[node name="MiddleSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
split_offset = -250

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer/VBoxContainer2" instance=ExtResource("3_6f40e")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer/VBoxContainer2"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 70)
layout_mode = 2
size_flags_horizontal = 4
text = "开始语音识别"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer"]
visible = false
layout_mode = 2
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer/VBoxContainer"]
layout_mode = 2
text = "热词："

[node name="HotWordContainer" parent="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer/VBoxContainer" instance=ExtResource("3_p06fv")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
modulate = Color(1, 1, 1, 0.635294)
layout_mode = 2
text = "File Path: "

[node name="CurrentPathLabel" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ConfigWindow" type="Window" parent="."]
unique_name_in_owner = true
title = "设置 - FunASR"
position = Vector2i(30, 80)
size = Vector2i(800, 500)
visible = false
transient = true
exclusive = true
script = ExtResource("6_cjv4c")

[node name="Panel" type="Panel" parent="ConfigWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConfigSettingContainer" parent="ConfigWindow" instance=ExtResource("3_a0hct")]

[node name="AutoExecuteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
position = Vector2i(50, 50)

[node name="AboutWindow" type="Window" parent="."]
unique_name_in_owner = true
title = "关于"
position = Vector2i(50, 50)
size = Vector2i(800, 650)
visible = false
transient = true
exclusive = true
popup_window = true

[node name="About" parent="AboutWindow" instance=ExtResource("8_swybj")]

[connection signal="menu_check_toggled" from="MarginContainer/VBoxContainer2/PanelContainer/Menu" to="." method="_on_menu_menu_check_toggled"]
[connection signal="menu_pressed" from="MarginContainer/VBoxContainer2/PanelContainer/Menu" to="." method="_on_menu_menu_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/HBoxContainer2/RecognitionModeButton" to="." method="_on_recognition_mode_button_item_selected"]
[connection signal="dragged" from="MarginContainer/VBoxContainer2/Content/LeftSplitContainer" to="." method="_on_left_split_container_dragged"]
[connection signal="cell_selected" from="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/PanelContainer/MarginContainer/VBoxContainer/FileQueue" to="." method="_on_file_queue_cell_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Content/LeftSplitContainer/MiddleSplitContainer/VBoxContainer2/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="AutoExecuteTimer" to="." method="_on_auto_execute_timer_timeout"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="close_requested" from="AboutWindow" to="AboutWindow" method="hide"]
